# transaction-analyzer

./: .env.example  .flake8  .gitignore  IDE_SETUP.md  LICENSE  README.md  demo.py  main.py  pyproject.toml  user_settings.json  web_server.py
data/: README.md
git/scm0/: input
src/: logger_config.py  main.py  reports.py  services.py  utils.py  views.py
templates/: index.html
tests/: test_logger_config.py  test_reports.py  test_services.py  test_utils.py  test_views.py
wiki/: API-Reference.md  Configuration.md  Contributing.md  Home.md  Installation.md  README.md  Troubleshooting.md  Usage.md  Web-Interface.md
